@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.blocks;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -54,7 +53,7 @@ public class XpathRegressionEmptyBlockTest extends AbstractXpathTestSupport {
             "5:38: " + getCheckMessage(EmptyBlockCheck.class,
                 EmptyBlockCheck.MSG_KEY_BLOCK_EMPTY, "for"),
         };
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT"
                     + "/CLASS_DEF[./IDENT[@text='InputXpathEmptyBlockEmpty']]"
                     + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='emptyLoop']]"
@@ -74,7 +73,7 @@ public class XpathRegressionEmptyBlockTest extends AbstractXpathTestSupport {
             "5:38: " + getCheckMessage(EmptyBlockCheck.class,
                 EmptyBlockCheck.MSG_KEY_BLOCK_NO_STATEMENT),
         };
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT"
                         + "/CLASS_DEF[./IDENT[@text='InputXpathEmptyBlockEmpty']]"
                         + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='emptyLoop']]"
