@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.coding;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -54,7 +53,7 @@ public class XpathRegressionSuperCloneTest extends AbstractXpathTestSupport {
             "6:23: " + getCheckMessage(SuperCloneCheck.class, AbstractSuperCheck.MSG_KEY, "clone"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathSuperCloneInnerClone']]"
                         + "/OBJBLOCK/CLASS_DEF[./IDENT[@text='InnerClone']]"
@@ -77,7 +76,7 @@ public class XpathRegressionSuperCloneTest extends AbstractXpathTestSupport {
             "6:23: " + getCheckMessage(SuperCloneCheck.class, AbstractSuperCheck.MSG_KEY, "clone"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathSuperCloneNoSuperClone']]"
                         + "/OBJBLOCK/CLASS_DEF[./IDENT[@text='NoSuperClone']]"
@@ -100,7 +99,7 @@ public class XpathRegressionSuperCloneTest extends AbstractXpathTestSupport {
             "4:19: " + getCheckMessage(SuperCloneCheck.class, AbstractSuperCheck.MSG_KEY, "clone"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathSuperClonePlainAndSubclasses']]"
                         + "/OBJBLOCK/METHOD_DEF/IDENT[@text='clone']"
