@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.coding;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -56,7 +55,7 @@ public class XpathRegressionUnnecessarySemicolonAfterTypeMemberDeclarationTest
                 UnnecessarySemicolonAfterTypeMemberDeclarationCheck.MSG_SEMI),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT"
                 + "[@text="
                 + "'InputXpathUnnecessarySemicolonAfterTypeMemberDeclarationDefault']]"
@@ -79,7 +78,7 @@ public class XpathRegressionUnnecessarySemicolonAfterTypeMemberDeclarationTest
                 UnnecessarySemicolonAfterTypeMemberDeclarationCheck.MSG_SEMI),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[."
                 + "/IDENT[@text='InputXpathUnnecessarySemicolonAfterTypeMember"
                     + "DeclarationTokens']]"
